# MiniAgent---Production-Ready-AI-Agent-Framework

./: .gitignore  README.md  agent_config.json  pyproject.toml
agent_memory/: episodic.json
agent_memory/vector/: chroma.sqlite3
artifacts/: hello_world.py
examples/: agent_demo.py  complexity_routing_demo.py  consent_demo.py  thinking_demo.py
src/miniagent/: __init__.py  cli.py  config.py
src/miniagent/core/: runtime.py  state.py
src/miniagent/eval/: harness.py
src/miniagent/exec/: sandbox.py
src/miniagent/guard/: consent.py  schema.py
src/miniagent/memory/: store.py
src/miniagent/policy/: complexity_analyzer.py  model_selector.py  planner.py  planner_llm.py
src/miniagent/tools/: builtin.py  registry.py
tests/: test_basic.py
