[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniagent-starter"
version = "0.1.0"
description = "A minimal, extensible agent framework"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.8",
    "tenacity>=8.2.3",
    "httpx>=0.27.0",
    "openai>=1.40.0",
    "psutil>=5.9.0",
    "numpy>=1.24.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
authors = [{name="Your Name"}]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
miniagent = "miniagent.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
